--- a/StudentVotingSystem/pom.xml
+++ b/StudentVotingSystem/pom.xml
@@ -63,20 +63,21 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-security</artifactId>
-		    <version>2.3.12.RELEASE</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
 		<dependency>
 		    <groupId>org.thymeleaf.extras</groupId>
 		    <artifactId>thymeleaf-extras-springsecurity5</artifactId>
-		    <version>3.0.4.RELEASE</version>
 		</dependency>
 		<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-web</artifactId>
-</dependency>
-	</dependencies>
-
+   			 <groupId>org.springframework.boot</groupId>
+   			 <artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency> 
+    		<groupId>org.springframework.boot</groupId> 
+    			<artifactId>spring-boot-starter-validation</artifactId> 
+				</dependency>
+			</dependencies>
 	<build>
 		<plugins>
 			<plugin>
