--- a/StudentVotingSystem/src/main/resources/application.properties
+++ b/StudentVotingSystem/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/studentvotingsystem
 spring.datasource.username=root
 spring.datasource.password=ca28ri06na
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
